Change setup to work around immutable collections